# topobank-stack-development

./: .env  .env.template  .gitignore  .gitmodules  LICENSE  README.rst  docker-compose.yml  package-lock.json  package.json  print-version.sh  pyproject.toml  tsconfig.json  webpack.config.js
.envs/: .datacite.template  .django  .django.template  .orcid.template  .postgres
compose/django/: Dockerfile  entrypoint  start
compose/django/celery/beat/: start
compose/django/celery/worker/: start
compose/django/scripts/: entrypoint.sh  install-plugins.sh  make-venv.sh  start-celerybeat.sh  start-celeryworker.sh  start-gunicorn.sh
compose/postgres/: Dockerfile
config/: analysis_cards.js
requirements/: .gitignore  Makefile  README  README.md  development.txt
